# laborator-pcd-2026

project/: .gitignore  FILE_EXPLANATIONS.md  Makefile  README.md  quick-test.sh
project/analysis/: plot_paper_figures.py  plot_results.py  requirements.txt  summary_table.py
project/experiments/: collect_prometheus.sh  fault_injection.sh  run_all.sh  run_experiment.sh  run_hpa_experiment.sh
project/grafana/: envoy-dashboard.json  worker-dashboard.json
project/k8s/: 00-namespace.yaml  10-worker-deploy.yaml  11-worker-slow-deploy.yaml  20-worker-svc.yaml  41-envoy-deploy.yaml  42-envoy-svc.yaml  43-envoy-config-rr.yaml  44-envoy-config-least-request.yaml  45-envoy-config-ring-hash.yaml  46-envoy-config-maglev.yaml  50-envoy-servicemonitor.yaml  51-worker-servicemonitor.yaml  60-hpa.yaml  61-prometheus-rules.yaml
project/load/k6/: burst.js  heavy.js  spike.js  steady.js
project/paper/: main.tex  references.bib
project/worker/: Cargo.toml  Dockerfile
project/worker/src/: main.rs
tema1/: .gitignore  generate_charts.py  generate_data.py  run_experiments.py
tema1/client/: .gitignore  Cargo.toml
tema1/client/src/: main.rs
tema1/client/src/file/: mod.rs
tema1/client/src/transport/: mod.rs  quic.rs  quic_stop_and_wait.rs  tcp.rs  udp.rs  udp_stop_and_wait.rs
tema1/report/: .gitignore  report.tex  results.csv
tema1/server/: Cargo.toml
tema1/server/src/: main.rs
tema1/server/src/transport/: mod.rs  quic.rs  quic_stop_and_wait.rs  tcp.rs  udp.rs  udp_stop_and_wait.rs
tema1/shared/: Cargo.toml
tema1/shared/src/: lib.rs  quic.rs
