[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
shared = { path = "../shared" }
quinn = { version = "0.11", features = ["runtime-tokio", "rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
